Initial commit with menu, options, and early combat ideas

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ project(":core") {
 		compile "net.dermetfan.libgdx-utils:libgdx-utils:$gdxUtilsVersion"
 		compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:$gdxUtilsVersion"
 		compile group: 'com.google.guava', name: 'guava', version: '19.0'
+		compile fileTree(dir: '../libs', include: '*.jar')
     }
 }
 
