--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-sourceSets.com.mygdx.game.srcDirs = [ "src/" ]
+sourceSets.main.java.srcDirs = [ "src/" ]
 
 
 eclipse.project {
